{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 63,
  "lineage": "b954faab-5265-477f-f082-d4eadc44cdbf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "venkatesh_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0244058f3ce25edee",
            "arn": "arn:aws:ec2:us-east-1:124556085653:elastic-ip/eipalloc-0244058f3ce25edee",
            "association_id": "eipassoc-08c8979df37c371be",
            "domain": "vpc",
            "id": "eipalloc-0244058f3ce25edee",
            "instance": "i-0191bc57eec785486",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fc9a4b4891f5c9e7",
            "private_dns": "ip-10-85-1-10.ec2.internal",
            "private_ip": "10.85.1.10",
            "public_dns": "ec2-174-129-108-37.compute-1.amazonaws.com",
            "public_ip": "174.129.108.37",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "venkatesh_eip"
            },
            "tags_all": {
              "Name": "venkatesh_eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.venkatesh_eni",
            "aws_security_group.venkatesh-sg",
            "aws_subnet.venkatesh_sn",
            "aws_vpc.venkatesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c3389a4fa5bddaad",
            "arn": "arn:aws:ec2:us-east-1:124556085653:instance/i-0191bc57eec785486",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0191bc57eec785486",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "venkatkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0fc9a4b4891f5c9e7"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-0fc9a4b4891f5c9e7"
              }
            ],
            "primary_network_interface_id": "eni-0fc9a4b4891f5c9e7",
            "private_dns": "ip-10-85-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.85.1.10",
            "public_ip": "174.129.108.37",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cac61d99cd9fd24b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09839acfd98aad623",
            "tags": {
              "Name": "Web1Server"
            },
            "tags_all": {
              "Name": "Web1Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a57b725835237464"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124556085653",
            "id": "i-0191bc57eec785486",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_network_interface.venkatesh_eni",
            "aws_security_group.venkatesh-sg",
            "aws_subnet.venkatesh_sn",
            "aws_vpc.venkatesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "venkatesh_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:internet-gateway/igw-09af44ba03efc3fcb",
            "id": "igw-09af44ba03efc3fcb",
            "owner_id": "124556085653",
            "region": "us-east-1",
            "tags": {
              "Name": "venkatesh_igw"
            },
            "tags_all": {
              "Name": "venkatesh_igw"
            },
            "vpc_id": "vpc-02580e001d5b0110a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.venkatesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "venkatesh_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:network-interface/eni-0fc9a4b4891f5c9e7",
            "attachment": [
              {
                "attachment_id": "eni-attach-08e45cb91114ca003",
                "device_index": 0,
                "instance": "i-0191bc57eec785486",
                "network_card_index": 0
              }
            ],
            "id": "eni-0fc9a4b4891f5c9e7",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:d8:5d:d7:93",
            "owner_id": "124556085653",
            "private_ip": "10.85.1.10",
            "private_ip_list": [
              "10.85.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.85.1.10"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-0a57b725835237464"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09839acfd98aad623",
            "tags": {
              "Name": "venkatesh_eni"
            },
            "tags_all": {
              "Name": "venkatesh_eni"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.venkatesh-sg",
            "aws_subnet.venkatesh_sn",
            "aws_vpc.venkatesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "venkatesh_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:route-table/rtb-0cd4c45bef80edd2e",
            "id": "rtb-0cd4c45bef80edd2e",
            "owner_id": "124556085653",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09af44ba03efc3fcb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "venkatesh_rt"
            },
            "tags_all": {
              "Name": "venkatesh_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02580e001d5b0110a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124556085653",
            "id": "rtb-0cd4c45bef80edd2e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.venkatesh_igw",
            "aws_vpc.venkatesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "venkatesh_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2a490a70d6924ca",
            "region": "us-east-1",
            "route_table_id": "rtb-0cd4c45bef80edd2e",
            "subnet_id": "subnet-09839acfd98aad623"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.venkatesh_igw",
            "aws_route_table.venkatesh_rt",
            "aws_subnet.venkatesh_sn",
            "aws_vpc.venkatesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "venkatesh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:security-group/sg-0a57b725835237464",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a57b725835237464",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "venkatesh-sg",
            "name_prefix": "",
            "owner_id": "124556085653",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02580e001d5b0110a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124556085653",
            "id": "sg-0a57b725835237464",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.venkatesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "venkatesh_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:subnet/subnet-09839acfd98aad623",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.85.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09839acfd98aad623",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124556085653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "venkatesh_sn"
            },
            "tags_all": {
              "Name": "venkatesh_sn"
            },
            "vpc_id": "vpc-02580e001d5b0110a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124556085653",
            "id": "subnet-09839acfd98aad623",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.venkatesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "venkatesh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:vpc/vpc-02580e001d5b0110a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.85.0.0/16",
            "default_network_acl_id": "acl-0d449e472661c1d7a",
            "default_route_table_id": "rtb-0f8738fa4b7429c2c",
            "default_security_group_id": "sg-0c0526726a7274a81",
            "dhcp_options_id": "dopt-0ff27c422068a9353",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02580e001d5b0110a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8738fa4b7429c2c",
            "owner_id": "124556085653",
            "region": "us-east-1",
            "tags": {
              "Name": "venkatesh_vpc"
            },
            "tags_all": {
              "Name": "venkatesh_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124556085653",
            "id": "vpc-02580e001d5b0110a",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}